--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ asyncpg = "^0.29.0"
 aiogram-dialog = "^2.1.0"
 redis = "^5.0.3"
 ujson = "^5.9.0"
+async-reduce = "^1.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
@@ -100,6 +101,7 @@ no_implicit_optional = true
 [[tool.mypy.overrides]]
 module = [
     "aiomisc_dependency.*",
-    "argclass.*"
+    "argclass.*",
+    "async_reduce.*",
 ]
 ignore_missing_imports = true
