Update ci/cd and test files

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,7 @@
 APP_SECRET=secret
 APP_PG_DSN=postgresql+asyncpg://pguser:pgpass@localhost:5432/test_db
 APP_PRIVATE_KEY=
+
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
