--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,17 @@ python_functions = "test_*"
 python_classes = "TestSuite*"
 addopts = "-p no:cacheprovider"
 
+[tool.coverage.run]
+branch = true
+source = ["tth"]
+command_line = "-m pytest"
+
+[tool.coverage.report]
+show_missing = true
+
+[tool.coverage.xml]
+output = "coverage.xml"
+
 [tool.ruff]
 line-length = 88
 exclude = [
