--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: python:3.11
 variables:
   PIP_CACHE_DIR: $CI_PROJECT_DIR/.cache/pip
   POETRY_CACHE_DIR: $CI_PROJECT_DIR/.cache/pypoetry
-  POETRY_VIRTUALENVS_IN_PROJECT: true
+  POETRY_VIRTUALENVS_IN_PROJECT: 'true'
 
 cache:
   paths:
@@ -21,13 +21,15 @@ stages:
   - build
 
 lint:
-  <<: *poetry_setup
   stage: lint
+  interruptible: true
+  <<: *poetry_setup
   script:
     - make lint-ci
 
 test:
   stage: test
+  interruptible: true
   services:
     - name: postgres:15
       alias: db
@@ -49,4 +51,5 @@ test:
     reports:
       coverage_report:
         coverage_format: cobertura
-        path: coverage.xml
+        path: coverage_report.xml
+      junit: junit_report.xml
