--- a/docker/frontend/nginx.conf
+++ b/docker/frontend/nginx.conf
@@ -32,5 +32,8 @@ http {
         location = /50x.html {
             root /usr/share/nginx/html;
         }
+        location ~ {
+            root /usr/share/nginx/html;
+        }
     }
 }
