Fix api and build error

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,5 +113,6 @@ module = [
     "aiomisc_dependency.*",
     "argclass.*",
     "async_reduce.*",
+    "asyncpg.*",
 ]
 ignore_missing_imports = true
