Add yolo worker

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,8 @@
-APP_SECRET=secret
+APP_SECURITY_SECRET=secret
+APP_SECURITY_PRIVATE_KEY=
 APP_DB_PG_DSN=postgresql+asyncpg://pguser:pgpass@localhost:5432/test_db
-APP_PRIVATE_KEY=
+APP_AMQP_DSN=amqp://guest:guest@127.0.0.1:5672/
+APP_YOLO_MODEL_PATH=./last.pt
 
 POSTGRES_USER=
 POSTGRES_PASSWORD=
