--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,12 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: $RABBITMQ_USER
       RABBITMQ_DEFAULT_PASS: $RABBITMQ_PASSWORD
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 30s
+      timeout: 30s
+      retries: 3
+
 
   backend:
     build:
@@ -37,7 +43,6 @@ services:
       APP_HTTP_PORT: 8000
 
       APP_DB_PG_DSN: postgresql+asyncpg://$POSTGRES_USER:$POSTGRES_PASSWORD@db:5432/$POSTGRES_DB
-      APP_REDIS_REDIS_DSN: redis://redis:6379
 
       APP_SECURITY_SECRET: $APP_SECURITY_SECRET
       APP_SECURITY_PRIVATE_KEY: $APP_SECURITY_PRIVATE_KEY
@@ -45,10 +50,35 @@ services:
       APP_LOG_LEVEL: info
       APP_LOG_FORMAT: json
 
-      APP_AMQP_DSN: $APP_AMQP_DSN
+      APP_AMQP_DSN: amqp://$RABBITMQ_USER:$RABBITMQ_PASSWORD@rabbitmq:5672/
+
+      APP_PARSER_CRON_SPEC: '*/30 * * * *'
+
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      db:
+        condition: service_healthy
+
+  yolo-worker:
+    build:
+      context: .
+      dockerfile: docker/yolo/yolo.dockerfile
+      args:
+        APP_YOLO_MODEL_URL: $APP_YOLO_MODEL_URL
+    restart: unless-stopped
+    environment:
+      APP_DB_PG_DSN: postgresql+asyncpg://$POSTGRES_USER:$POSTGRES_PASSWORD@db:5432/$POSTGRES_DB
+
+      APP_LOG_LEVEL: info
+      APP_LOG_FORMAT: json
+
+      APP_AMQP_DSN: amqp://$RABBITMQ_USER:$RABBITMQ_PASSWORD@rabbitmq:5672/
 
     depends_on:
       db:
+        condition: service_healthy
+      rabbitmq:
         condition: service_healthy
 
   frontend:
