--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,7 +106,7 @@ fixable = ["ALL"]
 known-first-party = ["tth", "tests"]
 
 [tool.mypy]
-plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
+plugins = ["pydantic.mypy"]
 check_untyped_defs = true
 disallow_incomplete_defs = true
 disallow_untyped_defs = true
